<resources>
    <string name="app_name">TolonginApp</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="empty_string"/>
    <string name="txt_nama_donatur">Nama Donatur</string>
    <string name="txt_telepone">Nomor Telepon</string>
    <string name="txt_Register">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="txt_history">History</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_terkumpul">Terkumpul</string>
    <string name="txt_donasi_sekarang">Donasi Sekarang</string>
    <string name="txt_nominal">Nominal</string>
    <string name="txt_rp">Rp</string>
    <string name="txt_pilih_metode_pembayaran">Pilih metode pembayaran</string>
    <string name="txt_bni">BNI</string>
    <string name="txt_mandiri">Mandiri</string>
    <string name="txt_bri">BRI</string>
    <string name="txt_bca">BCA</string>
    <string name="txt_cimb_niaga">Cimb Niaga</string>
    <string name="txt_silahkan_transfer_tepat_sebesar">Silahkan transfer tepat sebesar :</string>
    <string name="txt_pembayaran_dapat_dilakukan_ke_rekening">Pembayaran dapat dilakukan ke rekening</string>
    <string name="txt_new_password">New Password</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="txt_change_password">Change Password</string>
    <string name="txt_transaksi">Transaksi</string>
    <string name="txt_donasi">Donasi</string>
    <string name="txt_detail_transaksi">Detail Transaksi</string>
    <string name="txt_don_t_have_an_account_sign_up">Don\'t have an account? %1$s</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="status_salah">Harus pengguna yang bisa masuk</string>
    <string name="txt_log_out">Log Out</string>
    <string name="txt_terbayar">Terbayar</string>
    <string name="detil_history">Detail History</string>
    <string name="txt_bayar">Bayar</string>
    <string name="txt_lunas">Lunas</string>
    <string name="txt_belum_terverivikasi">Belum Terverivikasi</string>
</resources>
