<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".section.login.LoginActivity">

    <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/dimen_0dp"
            android:id="@+id/til_email"
            app:hintTextAppearance="@style/TextLabel"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginRight="@dimen/dimen_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <EditText android:layout_width="match_parent"
                  android:id="@+id/et_email"
                  android:textColorHint="@color/colorPrimary"
                  android:inputType="textEmailAddress"
                  android:backgroundTint="@color/colorPrimary"
                  android:layout_height="wrap_content"
                  android:hint="@string/txt_email"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_password"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:passwordToggleEnabled="true"
            app:hintTextAppearance="@style/TextLabel"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            android:layout_marginTop="10dp"
            app:passwordToggleTint="@color/colorPrimary"
            app:layout_constraintRight_toRightOf="parent">
        <EditText android:layout_width="match_parent"
                  android:id="@+id/et_password"
                  android:textColorHint="@color/colorPrimary"
                  android:inputType="textPassword"
                  android:backgroundTint="@color/colorPrimary"
                  android:layout_height="wrap_content"
                  android:hint="@string/txt_password"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password"
            android:text="@string/txt_login"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:textAllCaps="false"/>

    <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp"
            android:layout_marginTop="10dp"
            android:text="@string/txt_don_t_have_an_account_sign_up"
            android:textAlignment="center"/>

</android.support.constraint.ConstraintLayout>