<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@color/grey">

    <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="fill_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content"/>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0dp"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:layout_marginBottom="@dimen/dimen_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_transfer_se"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/txt_silahkan_transfer_tepat_sebesar"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/tv_tranfer_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textSize="@dimen/font_18sp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_transfer_se"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    tools:text="Rp100000"
                    android:textColor="@color/grey_md100"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/tv_pembayaran_title"
                      android:fontFamily="@font/roboto_light"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/tv_tranfer_content"
                      android:layout_marginTop="@dimen/dimen_10dp"
                      android:text="@string/txt_pembayaran_dapat_dilakukan_ke_rekening"/>
            <View android:layout_width="@dimen/dimen_0dp"
                  android:layout_height="@dimen/dimen_1dp"
                  android:id="@+id/line1"
                  android:background="@color/grey"
                  android:layout_marginLeft="@dimen/dimen_24dp"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/tv_pembayaran_title"
                  android:layout_marginTop="@dimen/dimen_10dp"
                  android:layout_marginRight="@dimen/dimen_24dp"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/tv_nama_pengguna"
                      android:textColor="@color/grey_light"
                      android:fontFamily="@font/roboto_bold"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/line1"
                      android:layout_marginTop="@dimen/dimen_10dp"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/tv_no_rek"
                      android:fontFamily="@font/roboto_regular"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/tv_nama_pengguna"/>
            <ImageView android:layout_width="@dimen/dimen_100dp" android:layout_height="@dimen/dimen_100dp"
                       app:layout_constraintLeft_toLeftOf="parent"
                       android:id="@+id/iv_image"
                       app:layout_constraintRight_toRightOf="parent"
                       android:layout_marginTop="@dimen/dimen_10dp"
                       app:layout_constraintTop_toBottomOf="@id/tv_no_rek"/>

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_getimage"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_image"
                    android:background="@color/colorPrimary"
                    android:text="Get Image"
                    android:textColor="@color/white"
                    android:textAllCaps="false"/>
            <TextView android:layout_width="@dimen/dimen_0dp"
                      android:layout_height="wrap_content"
                      android:fontFamily="@font/roboto_bold"
                      android:textColor="@color/white"
                      android:background="@color/colorPrimary"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      android:text="@string/txt_terbayar"
                      android:id="@+id/txt_transaksi"
                      android:textAlignment="center"
                      android:padding="@dimen/dimen_10dp"/>
            <Button android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/white"
                    android:background="@color/pink"
                    android:textAllCaps="false"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/txt_terbayar"
                    android:id="@+id/btn_status"
                    android:textAlignment="center"
                    android:padding="@dimen/dimen_10dp"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>